finished login / logout

--- a/bj-client/src/main/resources/messages/en_US.properties
+++ b/bj-client/src/main/resources/messages/en_US.properties
@@ -1,3 +1,6 @@
 form.button.signin=Sign in
 form.label.welcome=Welcome
 error.login-dto.invalid=Bad credentials
+error.http.execute=No connection
+error.login.failed=Login failed
+error.unhandled=Error
